[tool.poetry]
name = "test_gpu"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
torch = { version = "^2.4.0", extras = ["cpu"] }
torchvision = { version = "^0.19.0", extras = ["cpu"] }

[tool.poetry.dev-dependencies]
torch = { version = "^2.4.0", extras = ["cu111"] }
torchvision = { version = "^0.19.0", extras = ["cu111"] }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

